<resources>
    <string name="app_name">ACTelemetryFrontend_Android</string>
<!-- Startup activity -->
    <string name="ip_address">IP Address</string>
    <string name="connect">Connect</string>
    <string name="action_settings">Settings</string>
    <string name="feature_dashboard">Dashboard</string>
    <string name="feature_livetiming">Live timing</string>
<!-- Dashboard activity and fragment -->
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="dash_speed">Speed</string>
    <string name="dash_gear">Gear</string>
    <string name="dash_rpm">Engine RPM</string>
    <string name="dash_throttle">T:</string>
    <string name="dash_brake">B:</string>
    <string name="dash_clutch">C:</string>
    <string name="dash_ctime">Current:</string>
    <string name="dash_btime">Best:</string>
    <string name="dash_split">Split:</string>
<!-- AC status strings -->
    <string name="status_ac_off">Stopped</string>
    <string name="status_ac_replay">Replay</string>
    <string name="status_ac_live">Live</string>
    <string name="status_ac_pause">Paused</string>
<!-- Session types -->
    <string name="session_unknown">Unknown</string>
    <string name="session_practice">Practice</string>
    <string name="session_qualify">Qualify</string>
    <string name="session_hotlap">Hotlap</string>
    <string name="session_race">Race</string>
    <string name="session_drift">Drift</string>
    <string name="session_drag">Drag</string>
    <string name="session_timeattack">Time attack</string>
</resources>
