<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".ConnectActivity">

    <TextView android:id="@+id/ipaddress" android:text="@string/ip_address" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/et_ipaddress"
        android:layout_below="@+id/ipaddress"
        android:layout_width="match_parent"
        android:layout_height="40dp" />
    <RadioGroup
        android:id="@+id/rg_feature"
        android:layout_below="@+id/et_ipaddress"
        android:layout_width="match_parent"
        android:layout_height="80dp">
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/feature_dashboard"
            android:checked="true"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/feature_livetiming"/>
    </RadioGroup>
    <Button
        android:id="@+id/btn_connect"
        android:layout_below="@+id/rg_feature"
        android:text="@string/connect"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:onClick="connect" />
</RelativeLayout>
